fix: build admin app to check for ts errors

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -49,6 +49,8 @@ There were a lot of changes from `8.x` to `14.2.2`, so please check the [RMWC ch
 <Alert type="danger">
 
   Please check your project for any issues and update your code accordingly.
+  
+  You can use `yarn webiny build apps/admin --env=YOUR_ENV` to build the Admin app and check for any errors.
 
   If you find any Webiny related issues, please report them on our [Slack channel](https://www.webiny.com/slack) or [GitHub repository](https://github.com/webiny/webiny-js/issues).
 
