fix: rephrase sentence

--- a/docs/developer-docs/5.40.x/headless-cms/extending/content-entry-live-preview.mdx
+++ b/docs/developer-docs/5.40.x/headless-cms/extending/content-entry-live-preview.mdx
@@ -106,4 +106,4 @@ The [LivePreview](https://github.com/webiny/webiny-examples/blob/master/cms-live
 
 </Alert>
 
-In the [Article component](https://github.com/webiny/webiny-examples/blob/master/cms-live-preview/5.40.x/extensions/website/src/Article/Article.tsx), you'll find how the article data is rendered. The Article `content` field is a simple array of objects you can iterate on and render the appropriate components. Using [Typescript type predicates](https://www.typescriptlang.org/docs/handbook/2/narrowing.html#using-type-predicates)you can also having proper code completion and type safety.
+In the [Article component](https://github.com/webiny/webiny-examples/blob/master/cms-live-preview/5.40.x/extensions/website/src/Article/Article.tsx), you'll find how the article data is rendered. The Article `content` field is a simple array of objects you can iterate on and render the appropriate components. Using [Typescript type predicates](https://www.typescriptlang.org/docs/handbook/2/narrowing.html#using-type-predicates)you can also have proper code completion and type safety for all your Dynamic Zone templates, which you can then confidently map onto your content block components.
