fix: update live preview article

--- a/docs/developer-docs/5.40.x/headless-cms/extending/content-entry-live-preview.mdx
+++ b/docs/developer-docs/5.40.x/headless-cms/extending/content-entry-live-preview.mdx
@@ -37,6 +37,12 @@ serving of actual website pages is left to you.
 
 The goal is to create a separate "preview" app (this can be a dedicated route in your existing website app, or a completely dedicated app) which is receiving changes from the Admin app as soon as changes are made to the data in the content entry editor. Whatever the frontend implementation, we'll refer to it as a **Preview** app from this point on in the article.
 
+<Alert type={"success"} title={"Framework Agnostic"}>
+
+The mechanics covered in this article are framework agnostic. The editor part of the process will be implemented in React, but the Preview app can be implemented in any JS framework. The provided Preview app implementation can easily be adapted to work in any JS framework, and the core functionality is written in plain Typescript to make it reusable.
+
+</Alert>
+
 The communication between the Admin and the Preview app is performed using the [window.postMessage()](https://developer.mozilla.org/en-US/docs/Web/API/Window/postMessage) API. The preview app is embedded into the Admin app via an iframe.
 
 We'll limit the preview functionality to a single content model only, so that the preview iframe is only visible when creating content entries for the **Article** content model.
