feat: create 5.40.1 release notes

--- a/docs/release-notes/5.40.1/changelog.mdx
+++ b/docs/release-notes/5.40.1/changelog.mdx
@@ -10,4 +10,16 @@ description: See what's new in Webiny version 5.40.1.
 
 ### Published Records Updated Correctly Upon Calling `createRevisionFrom`  ([#4180](https://github.com/webiny/webiny-js/pull/4180))
 
-✍️
+Prior to this release, when immediately publishing a revision created using the `createRevisionFrom` method, the revision's internal "published" record would not be updated correctly. This would cause the old published revisions to still be returned when performing queries. 
+
+This issue has been fixed, and now the published record is updated correctly when calling the `createRevisionFrom` method.
+
+## Other Improvements
+
+### Webiny Telemetry Service (WTS) - Using NPM Package Instead of a GitHub Reference  ([#4183](https://github.com/webiny/webiny-js/pull/4183))
+
+We've updated the way the internal [Webiny Telemetry Service (WTS)](https://github.com/webiny/wts) client is included in a Webiny project. Instead of referencing the client directly from GitHub, we now use the NPM package. 
+
+We've made this change because we've seen a couple of users bumping into issues when upgrading their projects. Basically, the client would not be downloaded correctly from GitHub, causing the project to fail to build.
+
+This way, the package will be installed from the NPM registry, which should make the upgrade process smoother.
