docs: added details to update Singular API Name and Plural API Name of a model

--- a/docs/developer-docs/5.40.x/headless-cms/extending/content-models-via-code.mdx
+++ b/docs/developer-docs/5.40.x/headless-cms/extending/content-models-via-code.mdx
@@ -632,3 +632,11 @@ export const createExtension = () => {
     ];
 };
 ```
+
+### Can I modify the Singular API Name and Plural API Name of a model?
+
+Modifying the Singular API Name and Plural API Name of a model cannot be done via the UI due to the potential risks involved. However, you can achieve this through the API by using the `updateContentModel` mutation in the [Headless CMS Manage GraphQL API](/docs/headless-cms/basics/graphql-api#manage), accessible in the API Playground.
+
+Please be extra caution when using the `updateContentModel` mutation. You must pass the entire content model object, including all fields, during the update. To get all the details about a model, you can use the `getContentModel` API. The reason for passing the complete object is to avoid ambiguity in partial updates, where it is unclear whether you intend to remove a value or keep it unchanged.
+
+For greater control over your models, you can create them via code as detailed in this tutorial.
