docs: added details on where to find details on the Webiny beta releases

--- a/docs/release-notes/upgrade-webiny.mdx
+++ b/docs/release-notes/upgrade-webiny.mdx
@@ -80,3 +80,16 @@ yarn webiny --version
 Additionally, the version is also shown in the deployed Admin Area React application, at the bottom of the main menu:
 
 ![Webiny Version in Admin Area](./assets/upgrading-webiny/ui-version.png)
+
+### Where can I find details on the Webiny beta releases?
+
+You can find details about beta versions on the [create-webiny-project - npm](https://www.npmjs.com/package/create-webiny-project?activeTab=versions) page.  
+If you are interested in setting up a Webiny project with a beta release, run the following command:
+
+```
+npx create-webiny-project@beta my-project --tag=5.40.0-beta.5
+```
+
+Additionally, set the environment variable `WEBINY_VERSION=5.40.0`. Feel free to update the tag version to your intended beta version.
+
+Please note, we do not recommend using beta versions for production projects. However, if you want to try out features available early in a beta release, you can set up a beta version.
