docs: add resizable columns chapter

--- a/docs/release-notes/5.40.1/changelog.mdx
+++ b/docs/release-notes/5.40.1/changelog.mdx
@@ -4,6 +4,8 @@ title: Webiny 5.40.1 Changelog
 description: See what's new in Webiny version 5.40.1.
 ---
 
+import otherAdjustColumnWidth from "./assets/other-adjust-column-width.gif";
+
 <GithubRelease version={"5.40.1"} />
 
 ## Headless CMS
@@ -23,3 +25,13 @@ We've updated the way the internal [Webiny Telemetry Service (WTS)](https://gith
 We've made this change because we've seen a couple of users bumping into issues when upgrading their projects. Basically, the client would not be downloaded correctly from GitHub, causing the project to fail to build.
 
 This way, the package will be installed from the NPM registry, which should make the upgrade process smoother.
+
+## Other
+
+### Allow editors to adjust the column width within the ACO list ([#4179](https://github.com/webiny/webiny-js/pull/4179))
+
+Prior to this release, editors were unable to adjust the column width, which could be problematic in cases of complex folder structures with multiple levels of nesting.
+
+This has been resolved: editors can now adjust the column width based on their needs. The configuration is saved within the browser's `localStorage`, ensuring that the system remembers latest column width settings for a more personalized and consistent user experience.
+
+<Image src={otherAdjustColumnWidth} title={"Adjusting column widths for a customized view."} />
