chore: remove usage of React.FC

--- a/docs/developer-docs/5.28.x/custom-app-tutorial/react-application/homepage.mdx
+++ b/docs/developer-docs/5.28.x/custom-app-tutorial/react-application/homepage.mdx
@@ -76,7 +76,7 @@ const LIST_PINS = gql`
 `;
 
 // The home page.
-const Home: React.FC = () => {
+const Home = () => {
   const listPinsQuery = useQuery(LIST_PINS, { variables: { limit: 100 } });
   const { data = [] } = listPinsQuery?.data?.pins?.listPins || {};
 
