--- a/docs/developer-docs/5.28.x/custom-app-tutorial/react-application/layout.mdx
+++ b/docs/developer-docs/5.28.x/custom-app-tutorial/react-application/layout.mdx
@@ -100,7 +100,7 @@ type Props = { className: string };
  * The default layout component which you can use on any page.
  * Feel free to customize it or create additional layout components.
  */
-const Layout: React.FC<Props> = props => {
+const Layout = (props: Props) => {
   return (
     <div className="layout">
       {/* We're using the `nav` tag for rendering the header. */}
