--- a/docs/developer-docs/5.28.x/custom-app-tutorial/react-application/new-pin-modal-dialog.mdx
+++ b/docs/developer-docs/5.28.x/custom-app-tutorial/react-application/new-pin-modal-dialog.mdx
@@ -57,7 +57,7 @@ type Props = {
   onClose: Function;
 };
 
-const NewPinModal: React.FC<Props> = props => {
+const NewPinModal = (props: Props) => {
   // A reference to the form rendered below.
   const [form] = Form.useForm();
 
@@ -145,7 +145,7 @@ import logo from "~/images/logo.png";
  * The default layout component which you can use on any page.
  * Feel free to customize it or create additional layout components.
  */
-const Layout: React.FC<{ className: string }> = props => {
+const Layout = (props: { className: string }) => {
 +    const [visible, setVisible] = useState(false);
 
     return (
