--- a/docs/developer-docs/5.28.x/custom-app-tutorial/securing-react-application/initial-setup.mdx
+++ b/docs/developer-docs/5.28.x/custom-app-tutorial/securing-react-application/initial-setup.mdx
@@ -91,7 +91,7 @@ Auth.configure({
 });
 
 // The `Authenticator` component.
-const Authenticator: React.FC = props => {
+const Authenticator = props => {
   const { setIdentity } = useSecurity();
 
   useEffect(() => {
