--- a/docs/developer-docs/5.28.x/custom-app-tutorial/securing-react-application/integrating-hosted-ui-authentication-flow.mdx
+++ b/docs/developer-docs/5.28.x/custom-app-tutorial/securing-react-application/integrating-hosted-ui-authentication-flow.mdx
@@ -53,7 +53,7 @@ import NewPinModal from "./NewPinModal";
  * The default layout component which you can use on any page.
  * Feel free to customize it or create additional layout components.
  */
-const Layout: React.FC<{ className: string }> = (props) => {
+const Layout = (props: { className: string }) => {
   const [visible, setVisible] = useState(false);
 + const { identity } = useSecurity();
 + const signIn = useCallback(() => Auth.federatedSignIn(), []);
