--- a/docs/developer-docs/5.28.x/custom-app-tutorial/wrapping-it-up/wrapping-it-up.mdx
+++ b/docs/developer-docs/5.28.x/custom-app-tutorial/wrapping-it-up/wrapping-it-up.mdx
@@ -69,7 +69,7 @@ const GET_PIN = gql`
 type Props = RouteChildrenProps<{ id: string }>;
 
 // The Pin Details page.
-const PinDetails: React.FC<Props> = props => {
+const PinDetails = (props: Props) => {
     const getPinQuery = useQuery(GET_PIN, { variables: { id: props.match.params.id } });
     const data = getPinQuery?.data?.pins?.getPin;
 
