--- a/docs/developer-docs/5.31.x/core-development-concepts/extending-and-customizing/integrate-tailwindcss.mdx
+++ b/docs/developer-docs/5.31.x/core-development-concepts/extending-and-customizing/integrate-tailwindcss.mdx
@@ -185,7 +185,7 @@ import React from "react";
 + import { TailwindHeader } from "./Static/TailwindHeader";
 (...)
 
-const Static: React.FC<{ children: React.ReactNode }> = ({ children }) => {
+const Static = ({ children }: { children: React.ReactNode }) => {
     return (
         <Layout>
             <Global styles={globalStyles} />
