--- a/docs/developer-docs/5.34.x/enterprise/theme-manager.mdx
+++ b/docs/developer-docs/5.34.x/enterprise/theme-manager.mdx
@@ -120,7 +120,7 @@ import { Website } from "@webiny/app-website";
 
 + const ThemeLoader = createThemeLoader({ themes });
 
-export const App: React.FC = () => {
+export const App = () => {
 +    return <Website providers={[ThemeLoader]} />;
 };
 ```
@@ -225,7 +225,7 @@ const themes = [
 
 const ThemeLoader = createThemeLoader({ themes });
 
-export const App: React.FC = () => {
+export const App = () => {
     return <Website providers={[ThemeLoader]} />;
 };
 ```
