--- a/docs/developer-docs/5.34.x/page-builder/theming/best-practices.mdx
+++ b/docs/developer-docs/5.34.x/page-builder/theming/best-practices.mdx
@@ -236,7 +236,7 @@ const Layout = styled.div`
     }
 `;
 
-const Static: React.FC<{ children: React.ReactNode }> = ({ children }) => {
+const Static = ({ children }: { children: React.ReactNode }) => {
     return (
         <Layout>
 +           <Global styles={globalStyles} />
