--- a/docs/developer-docs/5.35.x/admin-area/extending/custom-providers.mdx
+++ b/docs/developer-docs/5.35.x/admin-area/extending/custom-providers.mdx
@@ -35,7 +35,7 @@ import "./App.scss";
 +   };
 + });
 
-export const App: React.FC = () => {
+export const App = () => {
     return (
       <Admin>
         <Cognito />
