--- a/docs/developer-docs/5.37.x/admin-area/extending/graphql-request-batching.mdx
+++ b/docs/developer-docs/5.37.x/admin-area/extending/graphql-request-batching.mdx
@@ -47,7 +47,7 @@ const apolloClientFactory: typeof createApolloClient = ({ uri }) => {
   });
 };
 
-export const App: React.FC = () => {
+export const App = () => {
   return (
     <Admin createApolloClient={apolloClientFactory}>
       <Cognito />
@@ -101,7 +101,7 @@ const apolloClientFactory: typeof createApolloClient = ({ uri }) => {
   });
 };
 
-export const App: React.FC = () => {
+export const App = () => {
   return (
     <Admin createApolloClient={apolloClientFactory}>
       <Cognito />
