--- a/docs/developer-docs/5.37.x/enterprise/cognito-federation.mdx
+++ b/docs/developer-docs/5.37.x/enterprise/cognito-federation.mdx
@@ -170,7 +170,7 @@ const cognitoConfig: CreateAuthenticationConfig = {
   federatedProviders: ["Google"]
 };
 
-export const App: React.FC = () => {
+export const App = () => {
   return (
     <Admin>
       <Cognito config={cognitoConfig} />
