--- a/docs/developer-docs/5.37.x/file-manager/extending/customize-file-filters.mdx
+++ b/docs/developer-docs/5.37.x/file-manager/extending/customize-file-filters.mdx
@@ -49,7 +49,7 @@ import "./App.scss";
 +   return <span>Demo Filter</span>;
 + }
 
-export const App: React.FC = () => {
+export const App = () => {
     return (
       <Admin>
         <Cognito />
