--- a/docs/developer-docs/5.37.x/headless-cms/extending/customize-entry-editor-actions.mdx
+++ b/docs/developer-docs/5.37.x/headless-cms/extending/customize-entry-editor-actions.mdx
@@ -84,7 +84,7 @@ import "./App.scss";
 +   return <ButtonPrimary onAction={copyJson}>Copy JSON data</ButtonPrimary>;
 + }
 
-export const App: React.FC = () => {
+export const App = () => {
     return (
       <Admin>
         <Cognito />
@@ -188,7 +188,7 @@ import "./App.scss";
 +   );
 + }
 
-export const App: React.FC = () => {
+export const App = () => {
     return (
       <Admin>
        <Cognito />
