--- a/docs/developer-docs/5.38.x/file-manager/extending/customize-file-details-drawer.mdx
+++ b/docs/developer-docs/5.38.x/file-manager/extending/customize-file-details-drawer.mdx
@@ -46,7 +46,7 @@ import { Cognito } from "@webiny/app-admin-users-cognito";
 + import { FileManagerViewConfig } from "@webiny/app-file-manager";
 import "./App.scss";
 
-export const App: React.FC = () => {
+export const App = () => {
     return (
       <Admin>
         <Cognito />
