--- a/docs/developer-docs/5.38.x/page-builder/extending/customize-page-bulk-actions.mdx
+++ b/docs/developer-docs/5.38.x/page-builder/extending/customize-page-bulk-actions.mdx
@@ -42,7 +42,7 @@ import "./App.scss";
 + // You can destructure child components to make the code more readable and easier to work with.
 + const { Browser } = PageListConfig;
 
-export const App: React.FC = () => {
+export const App = () => {
     return (
       <Admin>
         <Cognito />
@@ -113,7 +113,7 @@ import "./App.scss";
 +   );
 + };
 
-  export const App: React.FC = () => {
+  export const App = () => {
     return (
       <Admin>
         <Cognito />
@@ -218,7 +218,7 @@ import "./App.scss";
 +   );
 + };
 
-  export const App: React.FC = () => {
+  export const App = () => {
     return (
       <Admin>
         <Cognito />
