--- a/docs/developer-docs/5.39.x/file-manager/extending/customize-file-list-table-columns.mdx
+++ b/docs/developer-docs/5.39.x/file-manager/extending/customize-file-list-table-columns.mdx
@@ -55,7 +55,7 @@ import "./App.scss";
 + // You can destructure config components to make the code more readable and easier to work with.
 + const { Browser } = FileManagerViewConfig;
 
-export const App: React.FC = () => {
+export const App = () => {
     return (
       <Admin>
         <Cognito />
