--- a/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-actions.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-actions.mdx
@@ -50,7 +50,7 @@ import "./App.scss";
 + // You can destructure config components to make the code more readable and easier to work with.
 + const { Browser } = ContentEntryListConfig;
 
-export const App: React.FC = () => {
+export const App = () => {
     return (
       <Admin>
         <Cognito />
