--- a/docs/developer-docs/5.40.x/enterprise/cognito-federation.mdx
+++ b/docs/developer-docs/5.40.x/enterprise/cognito-federation.mdx
@@ -190,7 +190,7 @@ import "./App.scss";
 +   ]
 + };
 
-export const App: React.FC = () => {
+export const App = () => {
     return (
       <Admin>
 +       <Cognito config={cognitoConfig} />
@@ -387,7 +387,7 @@ import "./App.scss";
 +   ]
 + };
 
-export const App: React.FC = () => {
+export const App = () => {
     return (
       <Admin>
 +       <Cognito config={cognitoConfig} />
@@ -471,7 +471,7 @@ import "./App.scss";
 +   };
 + });
 
-  export const App: React.FC = () => {
+  export const App = () => {
     return (
       <Admin>
 +       <Cognito config={cognitoConfig} />
@@ -535,7 +535,7 @@ To only use the sign-in UI provided by Webiny, you only need to swap the `Cognit
 +   };
 + });
   
-  export const App: React.FC = () => {
+  export const App = () => {
     return (
       <Admin>
 +       <CognitoLogin config={cognitoConfig} userMenuItems={{ userInfo: true, signOut: true }} />
