--- a/docs/developer-docs/5.40.x/page-builder/extending/customize-editors.mdx
+++ b/docs/developer-docs/5.40.x/page-builder/extending/customize-editors.mdx
@@ -59,7 +59,7 @@ import { Cognito } from "@webiny/app-admin-users-cognito";
 + import { PageEditorConfig } from "@webiny/app-page-builder";
 import "./App.scss";
 
-export const App: React.FC = () => {
+export const App = () => {
     return (
       <Admin>
         <Cognito />
