--- a/docs/developer-docs/5.40.x/page-builder/theming/page-layouts.mdx
+++ b/docs/developer-docs/5.40.x/page-builder/theming/page-layouts.mdx
@@ -60,7 +60,7 @@ const Layout = styled.div`
   }
 `;
 
-const Static: React.FC<{ children: React.ReactNode }> = ({ children }) => {
+const Static = ({ children }: { children: React.ReactNode }) => {
   return (
     <Layout>
       <Global styles={globalStyles} />
@@ -159,7 +159,7 @@ For the component, the following would be all the code that's required:
 ```tsx extensions/theme/src/layouts/pages/Blank.tsx
 import React from "react";
 
-const Blank: React.FC<{ children: React.ReactNode }> = ({ children }) => {
+const Blank = ({ children }: { children: React.ReactNode }) => {
   // Simply render the "children" prop, which contains the actual page content.
   return children;
 };
@@ -245,7 +245,7 @@ import { Footer } from "./Static/Footer";
 +     }
 + `;
 
-const Static: React.FC<{ children: React.ReactNode }> = ({ children }) => {
+const Static = ({ children }: { children: React.ReactNode }) => {
     return (
         <Layout>
 +           <Global styles={globalStyles} />
