--- a/docs/release-notes/5.34.1/changelog.mdx
+++ b/docs/release-notes/5.34.1/changelog.mdx
@@ -61,7 +61,7 @@ const MyProvider = Component => {
   };
 };
 
-export const App: React.FC = () => {
+export const App = () => {
   /* Pass your HOC to the Website app! */
   return <Website providers={[MyProvider]} />;
 };
