--- a/docs/developer-docs/5.28.x/custom-app-tutorial/react-application/pin-details-page.mdx
+++ b/docs/developer-docs/5.28.x/custom-app-tutorial/react-application/pin-details-page.mdx
@@ -70,7 +70,7 @@ const GET_PIN = gql`
 type Props = RouteChildrenProps<{ id: string }>;
 
 // The Pin Details page.
-const PinDetails: React.FC<Props> = props => {
+const PinDetails = (props: Props) => {
   const getPinQuery = useQuery(GET_PIN, { variables: { id: props.match.params.id } });
   const data = getPinQuery?.data?.pins?.getPin;
 
