--- a/docs/developer-docs/5.29.x/admin-area/extending/custom-routes.mdx
+++ b/docs/developer-docs/5.29.x/admin-area/extending/custom-routes.mdx
@@ -25,7 +25,7 @@ import React from "react";
 import { Cognito } from "@webiny/app-admin-users-cognito";
 import "./App.scss";
 
-export const App: React.FC = () => {
+export const App = () => {
     return (
       <Admin>
         <Cognito />
