--- a/docs/developer-docs/5.29.x/page-builder/extending/create-a-page-element.mdx
+++ b/docs/developer-docs/5.29.x/page-builder/extending/create-a-page-element.mdx
@@ -321,7 +321,7 @@ interface IFrameProps {
   element: PbEditorElement;
 }
 
-const IframeEditor: React.FC<IFrameProps> = ({ element }) => {
+const IframeEditor = ({ element }: IFrameProps) => {
   if (!element?.data?.iframe?.url) {
     return (
       <PreviewBox>
@@ -389,7 +389,7 @@ interface iFrameImagesSettingsProps {
   submit: () => void;
 }
 
-const IFrameSettings: React.FC<iFrameImagesSettingsProps> = props => {
+const IFrameSettings = (props: iFrameImagesSettingsProps) => {
   const { Bind, submit } = props;
   return (
     <Accordion title={"IFrame Source"} defaultValue={true}>
@@ -459,7 +459,7 @@ interface IFrameProps {
   element: PbEditorElement;
 }
 
-const IFrame: React.FC<IFrameProps> = ({ element }) => {
+const IFrame = ({ element }: IFrameProps) => {
   const { data } = element;
   // If the user didn't enter a URL, let's show a simple message.
   if (!data?.iframe?.url) {
