--- a/docs/developer-docs/5.33.x/file-manager/extending/create-a-custom-file-manager-renderer.mdx
+++ b/docs/developer-docs/5.33.x/file-manager/extending/create-a-custom-file-manager-renderer.mdx
@@ -182,7 +182,7 @@ const CustomFileManager = createComponentPlugin(FileManagerRenderer, () => {
   };
 });
 
-export const App: React.FC = () => {
+export const App = () => {
   return (
     <Admin>
       <Cognito />
