--- a/docs/developer-docs/5.37.x/file-manager/extending/customize-file-fields.mdx
+++ b/docs/developer-docs/5.37.x/file-manager/extending/customize-file-fields.mdx
@@ -138,7 +138,7 @@ import "./App.scss";
 +   };
 + });
 
-export const App: React.FC = () => {
+export const App = () => {
   return (
     <Admin>
       <Cognito />
