--- a/docs/developer-docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
+++ b/docs/developer-docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
@@ -42,7 +42,7 @@ import "./App.scss";
 + // You can destructure child components to make the code more readable and easier to work with.
 + const { Browser } = ContentEntryListConfig;
 
-export const App: React.FC = () => {
+export const App = () => {
     return (
       <Admin>
         <Cognito />
