--- a/docs/developer-docs/5.37.x/headless-cms/integrations/gatsby.mdx
+++ b/docs/developer-docs/5.37.x/headless-cms/integrations/gatsby.mdx
@@ -438,7 +438,7 @@ interface RichTextRendererProps {
   renderers?: Record<string, RichTextBlockRenderer>;
 }
 
-export const RichTextRenderer: React.FC<RichTextRendererProps> = props => {
+export const RichTextRenderer = (props: RichTextRendererProps) => {
   // Combine default renderers with custom renderers
   const renderers = Object.assign({}, defaultRenderers, props.renderers);
 
