--- a/docs/developer-docs/5.39.x/enterprise/theme-manager.mdx
+++ b/docs/developer-docs/5.39.x/enterprise/theme-manager.mdx
@@ -126,7 +126,7 @@ import { Website } from "@webiny/app-website";
 
 + const ThemeLoader = createThemeLoader({ themes });
 
-export const App: React.FC = () => {
+export const App = () => {
 +    return <Website providers={[ThemeLoader]} />;
 };
 ```
@@ -231,7 +231,7 @@ const themes = [
 
 const ThemeLoader = createThemeLoader({ themes });
 
-export const App: React.FC = () => {
+export const App = () => {
     return <Website providers={[ThemeLoader]} />;
 };
 ```
