--- a/docs/developer-docs/5.40.x/get-started/welcome.mdx
+++ b/docs/developer-docs/5.40.x/get-started/welcome.mdx
@@ -107,7 +107,7 @@ import { ReactComponent as CommunityIcon } from "./assets/resources-icons/commun
       <p>
         In this section, you'll learn how to customize the layout and visual aspects of your forms.
       </p>
-    </SectionBox>™
+    </SectionBox>
     <SectionBox title="Admin Area" Icon={AdminIcon} learnMoreLink="/docs/admin-area/basics/framework">
       <p>
         The Admin Area is an app inside which all other apps live. You can white-label the UI to match the brand of your customer, introduce new apps into the menu, modify the start page, and more. 
