chore: add changelog items

--- a/docs/developer-docs/5.40.x/headless-cms/extending/content-entry-traverser.mdx
+++ b/docs/developer-docs/5.40.x/headless-cms/extending/content-entry-traverser.mdx
@@ -44,7 +44,7 @@ createContextPlugin(context => {
     const includeFieldTypes = ["text", "long-text", "rich-text"];
 
     // Traverse the content entry values.
-    traverser.traverse(entry.values, ({ field, value, path }) => {
+    await traverser.traverse(entry.values, ({ field, value, path }) => {
       if (!includeFieldTypes.includes(field.type)) {
         return;
       }
