chore: update changelog

--- a/docs/release-notes/5.40.2/changelog.mdx
+++ b/docs/release-notes/5.40.2/changelog.mdx
@@ -24,7 +24,7 @@ Check out [this AWS Knowledge Center article](https://repost.aws/knowledge-cente
 
 ### Fix Content Entry Traverser and Make it Async ([#4196](https://github.com/webiny/webiny-js/pull/4196))
 
-Content Entry Traverser is now async, and support async visitors. We've also fixed a bug with the value path generation for single value `object` and `dynamicZone` fields, and ensured that the visitor function is executed for all falsy values (`null`, `false`, `[]`, `""`).
+Content Entry Traverser is now async, and supports async visitors. We've also fixed a bug with the value path generation for single value Object and Dynamic Zone fields, and ensured that the visitor function is executed for all falsy values (`null`, `false`, `[]`, `""`).
 
 ### Fix Default Value Handling for Predefined Values ([#4201](https://github.com/webiny/webiny-js/pull/4201))
 
