chore: 5.40.3 release notes

--- a/docs/release-notes/5.40.3/changelog.mdx
+++ b/docs/release-notes/5.40.3/changelog.mdx
@@ -39,3 +39,7 @@ For "title" field, the system will look for an applicable field of type `text`, 
 ### Fix Component Name Generation when Linking Extensions
 
 When linking extensions, we generate component names using the extension folder name. Your preferences for folder names may vary; camelCase, kebab-case... With this release we make sure that no matter the naming convention, we always generate a valid component name to be used in React.
+
+### Page Builder Tabs Element Active and Default State
+
+In the Page Builder editor, the Tabs element now has a dedicated class assigned to active Tab element label, which improves the UX by providing better visual feedback.
