fix: additional check for body query

--- a/docs/developer-docs/5.28.x/headless-cms/basics/using-graphql-api.mdx
+++ b/docs/developer-docs/5.28.x/headless-cms/basics/using-graphql-api.mdx
@@ -185,9 +185,11 @@ import { BeforeHandlerPlugin } from "@webiny/handler";
 const disableIntrospectionPlugin = new BeforeHandlerPlugin(async context => {
     // Check if the request body contains a GraphQL query
     const body = context.request.body as unknown as Record<string, any>;
-    if (!body?.query) {
+    if (typeof body?.query !== "string") {
         return;
-    } else if ((body.query as string).includes("__schema") === false) {
+    }
+    // Is the introspection query detected?
+    else if ((body.query as string).includes("__schema") === false) {
         return;
     }
 
